fix: stretch background to the whole page

--- a/singolo2.css
+++ b/singolo2.css
@@ -13,10 +13,15 @@ body {
 .portfolio {
     background-color: #2d303a;
     border-bottom: 6px solid #323756;
+
+}
+
+.portfolio__content {
     width: 1020px;
     margin: 0 auto;
     padding: 70px 40px 46.5px 40px;
 }
+
 .portfolio__caption {
     color: #666d89;
     font-weight: 900;
@@ -25,42 +30,48 @@ body {
     letter-spacing: 0.2px;
 
 }
+
 .portfolio__description {
     padding-top: 24px;
     font-weight: 300;
     color: #767e9e;
     line-height: 30px;
-    font-size:18px;
+    font-size: 18px;
     letter-spacing: -0.22px;
-    
+
 }
+
 .filter {
     margin-left: 1px;
     margin-top: 9px;
-    display:flex;
-    list-style:none;
+    display: flex;
+    list-style: none;
     justify-content: flex-start;
-    margin-bottom:20px;  /* ПЕРЕНЕСТИ */
-   
+    margin-bottom: 20px;
+    /* ПЕРЕНЕСТИ */
+
 }
+
 .filter-item {
-    
-line-height: 20px;
-border: 1px solid #767e9e;
-border-radius: 5px;
-margin-right: 10px;
-text-align: center;
-padding: 0 5.8px;
-font-weight: 400;
-font-size: 12px;
-color: #767e9e;
+
+    line-height: 20px;
+    border: 1px solid #767e9e;
+    border-radius: 5px;
+    margin-right: 10px;
+    text-align: center;
+    padding: 0 5.8px;
+    font-weight: 400;
+    font-size: 12px;
+    color: #767e9e;
 }
+
 .filter-item:first-child {
     letter-spacing: 0.38px;
-    
+
     border-color: #fff;
     color: #fff;
 }
+
 .filter-item:hover {
     cursor: pointer;
     transition: 0.1s;
@@ -73,7 +84,7 @@ color: #767e9e;
     display: flex;
     justify-content: space-between;
     flex-wrap: wrap;
-    
+
     max-height: 621px;
     overflow: hidden;
 
@@ -82,13 +93,17 @@ color: #767e9e;
 .gallery__img {
     width: 220px;
     height: 187px;
-    margin-bottom:20px;
+    margin-bottom: 20px;
 }
 
 .about-us {
     background-color: #f2f2f2;
     border-bottom: 6px solid #ffffff;
-   
+
+
+}
+
+.about-us__content {
     width: 1020px;
     margin: 0 auto;
     padding: 72px 40px 62px 40px;
@@ -103,45 +118,50 @@ color: #767e9e;
 }
 
 .about-us__description {
-    margin-top:26px;
+    margin-top: 26px;
     color: #767e9e;
     font-size: 18px;
     font-weight: 300;
     line-height: 30px;
     letter-spacing: -0.24px;
-     text-align: justify;
+    text-align: justify;
 
 }
 
 .employees {
-    margin-top:43px;
-    height:448px;
+    margin-top: 43px;
+    height: 448px;
     display: flex;
     justify-content: space-between;
 }
 
 .employee-card {
-    max-width:300px;
+    max-width: 300px;
 }
-.employee-card:nth-child(1) .employee-card__about {    /* Костыль */
+
+.employee-card:nth-child(1) .employee-card__about {
+    /* Костыль */
     letter-spacing: -0.149px;
 }
 
-.employee-card:nth-child(2) .employee-card__photo img {    /* Костыль */
-    margin-left:-1px;
+.employee-card:nth-child(2) .employee-card__photo img {
+    /* Костыль */
+    margin-left: -1px;
 }
 
-.employee-card:nth-child(2)  .employee-card__name {   /* Костыль */
+.employee-card:nth-child(2) .employee-card__name {
+    /* Костыль */
     letter-spacing: -0.2px;
 }
 
-.employee-card:nth-child(3)  .employee-card__name {   /* Костыль */
+.employee-card:nth-child(3) .employee-card__name {
+    /* Костыль */
     letter-spacing: 0.1px;
 }
 
 
 .employee-card__name {
-    margin-top:14px;
+    margin-top: 14px;
     color: #666d89;
     font-weight: 900;
     font-size: 18px;
@@ -153,28 +173,29 @@ color: #767e9e;
 
 
 .employee-card__about {
-    margin-top:11px;
+    margin-top: 11px;
     color: #767e9e;
     font-size: 12px;
     font-weight: 400;
     line-height: 20.7px;
     text-align: justify;
-    
+
 }
 
 
-.employee-card:nth-child(1) .social-links {   /* Костыль */
-    margin-left:1px;
+.employee-card:nth-child(1) .social-links {
+    /* Костыль */
+    margin-left: 1px;
 }
 
 .social-links {
-    margin-top:24px;
+    margin-top: 24px;
 }
+
 .social-links img {
-    margin-right:4px;
+    margin-right: 4px;
 }
 
 .social-links img:hover {
     opacity: 0.5;
 }
-
